# SecretLayer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CUSTOM_DOMAIN_GODADDY.md  GODADDY_SETUP.md  PRIVATE_LAYER_START_HERE.md  README.md  RENDER_MCP_SETUP.md  VOICEMAIL_SETUP.md  netlify.toml  package.json  pnpm-lock.yaml  render.yaml  server.js
.github/workflows/: deploy-family-testing.yml  deploy-github-pages.yml  deploy.yml  integration.yml  safety-gate.yml
apps/api/: package.json
apps/thoughtcapture-android/: README.md  (+3 more)
bank-app/: .env.example  README.md  auth.js  db.js  package-lock.json  package.json  server.js
data/: verification-log.json
dns/: family-testing.com.zone
docs/: BILLING.md  DEPLOY_LIVE.md  GROWTH_PLAYBOOK.md  PRODUCT_VISION.md  STRIPE_SETUP.md  STRIPE_SETUP_WALKTHROUGH.md
family-testing-deploy/: RENDER_SETUP.md  package.json  server.js
family-testing-services/: .gitignore  .npmignore  CLAUDE.md  GODADDY_DNS.md  GODADDY_SETUP.md  NETLIFY_SETUP.md  README.md  UPLOAD_NOW.md  about.html  index.html  package.json  server.js
private-layer/: .env.example  .gitignore  AGENTS.md  FINISH.bat  LOCAL_AGENT_HANDOFF.md  README.md  START-HERE.txt  package.json  pnpm-lock.yaml
private-layer/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
private-layer/apps/desktop/src-tauri/capabilities/: default.json
private-layer/apps/desktop/src-tauri/src/: config.rs  lib.rs  main.rs
public/: index.html  verify.html
scripts/: add-custom-domain.mjs  deploy-to-render.mjs  railway-apply-stripe-env.mjs  stripe-bootstrap.mjs  stripe-env.mjs
(+134 files in other folders)
